--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,21 +1,50 @@
+# The pipeline property will define the tasks and order to be executed. The posible values are:
+#
+# STOP_SERVICE
+# START_SERVICE
+# BACKUP_ORIGIN_DATABASE
+# BACKUP_DESTINATION_DATABASE
+# RESTORE_ORIGIN_DATABASE_IN_DESTINATION_DATABASE
+# EXECUTE_SCRIPTS_IN_ORIGIN_DATABASE
+# EXECUTE_SCRIPTS_IN_DESTINATION_DATABASE
+# DEPLOY_APPLICATION
+pipeline=STOP_SERVICE;BACKUP_ORIGIN_DATABASE;BACKUP_DESTINATION_DATABASE;RESTORE_ORIGIN_DATABASE_IN_DESTINATION_DATABASE;EXECUTE_SCRIPTS_IN_DESTINATION_DATABASE;DEPLOY_APPLICATION;START_SERVICE
+
+# The name of the Windows service to be started / stopped
 service.name=Tomcat
 
+# Connection data to origin database
 origin.database.url=localhost,1433
 origin.database.user=sa
 origin.database.password=0o9i8u7y
 origin.database.name=elastic_demo_web_20160315
 
+# Connection data to destination database
 destination.database.url=localhost,1433
 destination.database.user=sa
 destination.database.password=0o9i8u7y
 destination.database.name=elastic_test
 
+# Tomcat path 
+#
+# Example: C:\\Tomcat\\
 tomcat.path=D:\\Programacion\\Tomcat\\
 
+# The name of the war to be deployed in Tomcat
 tomcat.app.name=elastic_test
 
+# Paths of the SQL scripts to be executed in the database.
+# They will  be executed in descending order by name.
+#
+# Example: C:\\scripts\\
 database.update.scripts.path=D:\\Programacion\\workspace\\continuous_delivery_ant\\scripts\\
 
+# Path to get the new war of our application
+#
+# Example: C:\\war\\
 war.path=D:\\Programacion\\workspace\\continuous_delivery_ant\\war\\
 
+# Path to store the database backups generated
+#
+# Example: C:\backups\\
 backups.path=D:\\Programacion\\workspace\\continuous_delivery_ant\\backups\\
